--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 os: linux
 sudo: true
+dist: trusty
+language: cpp
 
-script:
+before_install:
+  - sudo sh -c "echo 'deb http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/Ubuntu_14.04/ /' >> /etc/apt/sources.list.d/owncloud-client.list"
+  - sudo sh -c "echo 'deb-src http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/Ubuntu_14.04/ /' >> /etc/apt/sources.list.d/owncloud-client.list"
+  - wget http://download.opensuse.org/repositories/isv:ownCloud:desktop/Ubuntu_14.04/Release.key
+  - sudo apt-key add - < Release.key
+  - sudo apt-get update
+  - sudo apt-get -y build-dep owncloud-client
+
+install:
   - git submodule update --init --recursive
   - mkdir build-linux
   - cd build-linux
