--- a/linux/debian/nextcloud-client/debian/control
+++ b/linux/debian/nextcloud-client/debian/control
@@ -39,14 +39,14 @@ Description: Nextcloud client internatialization files
 
 Package: nextcloud-client-nautilus
 Architecture: all
-Depends: nextcloud-client (=${binary:Version}), libnextcloudsync0, python-nautilus, nautilus
+Depends: nextcloud-client (>=${binary:Version}), libnextcloudsync0, python-nautilus, nautilus, ${misc:Depends}
 Description: Nautilus plugin for Nextcloud
   This package contains a Nautilus plugin to display
   synchronization status icons for Nextcloud files.
 
 Package: nextcloud-client-nemo
 Architecture: all
-Depends: nextcloud-client (=${binary:Version}), libnextcloudsync0, python-nemo, nemo
+Depends: nextcloud-client (>=${binary:Version}), libnextcloudsync0, python-nemo, nemo, ${misc:Depends}
 Description: Nemo plugin for Nextcloud
   This package contains a Nemo plugin to display
   synchronization status icons for Nextcloud files.
