snapcraft: rename snapd-xdg-open to just xdg-open
This is to avoid confusion on what we actually snap

--- a/linux/snap/snapcraft.yaml
+++ b/linux/snap/snapcraft.yaml
@@ -39,7 +39,7 @@ parts:
   desktop-qt5:
     stage: [ -./**/lib/*/qt5/**/libappmenu-qt5.so ]
 
-  snapd-xdg-open:
+  xdg-open:
     source: https://github.com/ubuntu-core/snapd-xdg-open.git
     source-depth: 1
     plugin: dump
