travis: update the snap version number based on git commit/tag
Signed-off-by: Marco Trevisan (Treviño) <mail@3v1n0.net>

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ before_install:
 install:
   - linux/travis-build.sh install
 
+before_script:
+  - linux/travis-build.sh before_script
+
 script:
   - linux/travis-build.sh script
 
