--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,12 @@ before_script:
 script:
   - linux/travis-build.sh script
 
+after_success:
+  - linux/travis-build.sh after_success
+
 deploy:
   - provider: script
     skip_cleanup: true
-    script: linux/travis-build.sh snap-deploy
+    script: linux/travis-build.sh snap_store_deploy
     on:
       condition: $BUILD_TYPE = snap && -n "$SNAPCRAFT_CONFIG_KEY" && -n "$SNAPCRAFT_CONFIG_IV"
