snapcraft : use snapcraft-preload remote part as it's more clear

--- a/linux/snap/snapcraft.yaml
+++ b/linux/snap/snapcraft.yaml
@@ -31,7 +31,7 @@ parts:
 
     after:
       - desktop-qt5
-      - preload
+      - snapcraft-preload
 
   xdg-open:
     source: https://github.com/ubuntu-core/snapd-xdg-open.git
