--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ deploy:
     skip_cleanup: true
     script: linux/travis-build.sh snap_store_deploy
     on:
-      condition: $BUILD_TYPE = snap && -n "$SNAPCRAFT_CONFIG_KEY" && -n "$SNAPCRAFT_CONFIG_IV"
+      condition: ($BUILD_TYPE = snap && -n "$SNAPCRAFT_CONFIG_KEY" && -n "$SNAPCRAFT_CONFIG_IV") || $BUILD_TYPE = debian
 
 branches:
   except:
