Use snapcraft-preload to redirect requests to the proper target (#115)

--- a/linux/snap/snapcraft.yaml
+++ b/linux/snap/snapcraft.yaml
@@ -25,16 +25,13 @@ parts:
     configflags:
       - -DCMAKE_BUILD_TYPE=Release
       - -DOEM_THEME_DIR=$SNAPCRAFT_PART_INSTALL/../src/nextcloudtheme
-
-      # XXX: This is an hack to have a kind of bind-mount with absolute prefix.
-      - -DCMAKE_INSTALL_PREFIX=/snap/$SNAPCRAFT_PROJECT_NAME/current/usr
-      - -DCMAKE_INSTALL_LIBDIR=/snap/$SNAPCRAFT_PROJECT_NAME/current/usr/lib
-      - -DSYSCONF_INSTALL_DIR=/snap/$SNAPCRAFT_PROJECT_NAME/current/etc
-    organize:
-      snap/nextcloud-client/current: .
+      - -DCMAKE_INSTALL_PREFIX=/usr
+      - -DCMAKE_INSTALL_LIBDIR=/usr/lib
+      - -DSYSCONF_INSTALL_DIR=/etc
 
     after:
       - desktop-qt5
+      - snapcraft-preload
 
   xdg-open:
     source: https://github.com/ubuntu-core/snapd-xdg-open.git
@@ -49,9 +46,10 @@ apps:
   nextcloud-client:
     aliases:
       - nextcloud
-    command: |
-      env LD_LIBRARY_PATH=$SNAP/usr/lib/nextcloud:$LD_LIBRARY_PATH
-      desktop-launch nextcloud
+
+    command: snapcraft-preload nextcloud
+    environment:
+      LD_LIBRARY_PATH: $SNAP/usr/lib/nextcloud:$LD_LIBRARY_PATH
     desktop: usr/share/applications/nextcloud.desktop
     plugs:
       - unity7
@@ -63,9 +61,9 @@ apps:
   cmd:
     aliases:
       - nextcloudcmd
-    command: |
-      env LD_LIBRARY_PATH=$SNAP/usr/lib/nextcloud:$LD_LIBRARY_PATH
-      desktop-launch nextcloudcmd
+    command: snapcraft-preload nextcloudcmd
+    environment:
+      LD_LIBRARY_PATH: $SNAP/usr/lib/nextcloud:$LD_LIBRARY_PATH
     plugs:
       - unity7
       - home
