--- a/linux/AppImage/Dockerfile
+++ b/linux/AppImage/Dockerfile
@@ -6,8 +6,8 @@ RUN apt-get update
 
 RUN apt-get install -y wget libsqlite3-dev libssl-dev cmake git software-properties-common build-essential mesa-common-dev fuse
 
-RUN add-apt-repository -y ppa:beineri/opt-qt562-trusty
+RUN add-apt-repository -y ppa:beineri/opt-qt58-trusty
 
 RUN apt-get update
 
-RUN apt-get install -y qt56base qt56tools
+RUN apt-get install -y qt58base qt58tools
